<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_color">

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/grid_2"
            android:text="@string/permissions"
            android:textAlignment="textStart"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="?colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Permissions" />

        <TextView
            android:id="@+id/permission_summary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="1.3dp"
            android:padding="@dimen/grid_2"
            android:text="@string/permission_message"
            android:textAlignment="textStart"
            android:textAppearance="?attr/textAppearanceHeadline5"
            android:textColor="?attr/colorSurface"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:text="@string/permission_message" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/setup_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/grid_2"
            android:layout_marginTop="@dimen/grid_2"
            android:padding="@dimen/grid_2"
            android:backgroundTint="?attr/colorSecondary"
            android:text="@string/action_setup"
            android:textColor="?attr/colorSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/permission_summary" />

        <TextView
            android:id="@+id/storage_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="1.3dp"
            android:layout_marginTop="@dimen/grid_6"
            android:drawableStart="@drawable/ic_storage_24px"
            android:drawablePadding="@dimen/grid_2"
            android:padding="@dimen/grid_2"
            android:text="@string/storage_message"
            android:textAlignment="textStart"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="?attr/colorSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setup_button"
            tools:text="@string/storage_message" />

        <TextView
            android:id="@+id/phone_state_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="1.3dp"
            android:drawableStart="@drawable/ic_perm_device_information_24px"
            android:drawablePadding="@dimen/grid_2"
            android:padding="@dimen/grid_2"
            android:text="@string/phone_state_message"
            android:textAlignment="textStart"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textColor="?attr/colorSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storage_message"
            tools:text="@string/phone_state_message" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>